--- a/upms-web/public/index.html
+++ b/upms-web/public/index.html
@@ -11,7 +11,7 @@
     <noscript>
       <strong>We're sorry but iview-admin doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div userId="app"></div>
+    <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
